--- a/index.html
+++ b/index.html
@@ -1019,6 +1019,11 @@
 								resolve( true );
 								break;
 							case "get_supplier_info":
+								if ( response == false ){
+									supplier_info_upload();
+									resolve( true );
+									break;
+								}
 								var cnt = document.getElementById( ele_id );
 								var var_val = cnt.getElementsByClassName("part_attr");
 								for (var i=0; i<var_val.length; i++){
