--- a/index.html
+++ b/index.html
@@ -1418,6 +1418,7 @@
 							receive_record();
 							break;
 						case "rem_supplier_data":
+							receive_db_supplier_name();
 							receive_supplier_list();
 							break;
 						default:
