--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 		
 		
 		// add new supplier name
-		function supplier_add_new_name( currdata ){
+		/*function supplier_add_new_name( currdata ){
 			if( currdata.trim() == "" ){
 				return;
 			}
@@ -394,7 +394,7 @@
 				"supplier": currdata
 			};
 			send_to_db( attr );
-		}
+		}*/
 		
 		
 		// supplier upload information
