--- a/index.html
+++ b/index.html
@@ -115,8 +115,6 @@
 							<br><textarea id="part_name_in" class="part_attr normal_font" name="part_name" rows="2" cols="50" wrap="hard" ></textarea>
 							<br><label for="part_format_in">規格 :</label>
 							<br><textarea id="part_format_in" class="part_attr normal_font" name="part_format" rows="2" cols="50" wrap="hard" ></textarea>
-							<br><label for="part_fignum_in">圖號 :</label><input id="part_fignum_in" class="part_attr input_container normal_font" name="part_fignum" type="text" style="width:200px" />
-							<br><label for="part_supplier_in">廠商 :</label><input id="part_supplier_in" class="part_attr input_container normal_font" name="part_supplier" list="supplier_list" type="text" style="width:100px" onchange="supplier_add_new_name( this.value )" />
 							<br><label for="part_unit_in">單位 :</label><select id="part_unit_in" class="part_attr input_container normal_font" name="part_unit" style="width:70px" ><option value="SET">SET</option><option value="PCS">PCS</option></select>
 							<br><label for="part_remark_in">備註 : </label>
 							<br><textarea id="part_remark_in" class="part_attr normal_font" name="part_remark" rows="5" cols="50" wrap="hard" ></textarea>
@@ -778,6 +776,9 @@
 				switch( num_value[0] ){
 					case "1":
 					case "2":
+						data_str += '<br><label for="part_format_in">規格 :</label>';
+						data_str += '<br><textarea id="part_format_in" class="part_attr normal_font" name="part_format" rows="2" cols="50" wrap="hard" ></textarea>'
+						data_str += '<br><label for="part_unit_in">單位 :</label><select id="part_unit_in" type="text" class="part_attr input_container" name="part_unit" style="width:70px" ><option value="SET">SET</option><option value="PCS">PCS</option></select>';
 						data_str += '<br><label for="part_remark_in">備註 : </label>';
 						data_str += '<br><textarea id="part_remark_in" class="part_attr" name="part_remark" rows="5" cols="50" wrap="hard" ></textarea>';
 						data_str += '<br><div class="col-xs-2" style="margin-top:5px;margin-bottom:5px"><button type="button" class="col-xs-12 btn btn-primary" onclick="append_btn_res()" >新增</button></div>';
@@ -894,13 +895,13 @@
 						attr.state = "add_newdata";
 						attr.number = num_str;
 						send_to_db( attr );
+						supplier_add_new_name( attr.supplier );
 					}
 				}
 			}
 			else{
 				alert( "input has error" );
 			}
-			alert( "test" );
 			var form_cnt = document.getElementById( form_id );
 			form_cnt.reset();
 		}
@@ -915,8 +916,10 @@
 				if( check_part_num( 0, 15, attr.number ) ){
 					attr.state = "replace_data";
 					send_to_db( attr );
+					supplier_add_new_name( attr.supplier );
 				}
 			}
+			
 		}
 
 		
