--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
 				alert( "請輸入廠商名稱" );
 				return false;
 			}
+			alert("test");
 			attr.state = "replace_supplier";
 			send_to_db( attr );
 		}
