--- a/index.html
+++ b/index.html
@@ -1042,6 +1042,8 @@
 								resolve( true );
 								break;
 							case "get_supplier_info":
+								alert( data.supplier );
+								alert( response.contact );
 								var cnt = document.getElementById( ele_id );
 								var var_val = cnt.getElementsByClassName("part_attr");
 								for (var i=0; i<var_val.length; i++){
