--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 		
 		
 		// search page edit part number field format
-		function edit_part_number( param, row, index ){
+		function edit_part_number( val, row, index ){
 			return ("<a onclick='link_to_bom_table(" + val + ")'>" + val + "</a>");
 		}
 		
