--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 		
 		// search page edit part number field format
 		function edit_part_number( val, row, index ){
-			return ("<a onclick='link_to_bom_table(" + val + ")'>" + val + "</a>");
+			return ("<p onclick='link_to_bom_table(" + val + ")'>" + val + "</p>");
 		}
 		
 		// link to bom
