--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
 		}
 		
 		// link to bom
-		function link_to_bom_table( part_num ){
-			alert( part_num );
+		function link_to_bom_table( ){
+
 			alert( "test" );
 		}
 		
