--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
 		}
 		
 		// link to bom
-		function link_to_bom_table( val ){
+		function link_to_bom_table( ){
 
-			alert( val );
+			alert( "test" );
 		}
 		
 		
