--- a/index.html
+++ b/index.html
@@ -364,13 +364,13 @@
 		
 		// search page edit part number field format
 		function edit_part_number( val, row, index ){
-			return ("<a onclick='link_to_bom_table( this.value )'>" + val + "</a>");
+			return ("<a onclick='link_to_bom_table( this )'>" + val + "</a>");
 		}
 		
 		// link to bom
-		function link_to_bom_table( part_num ){
+		function link_to_bom_table( part ){
 			
-			alert( this.value );
+			alert( part.value );
 		}
 		
 		
