--- a/index.html
+++ b/index.html
@@ -364,15 +364,16 @@
 		
 		// search page edit part number field format
 		function edit_part_number( val, row, index ){
-			return ("<a onclick='link_to_bom_table( this.value )'>" + val + "</a>");
+			return ("<a class='part_num_info' href='javascript:void(0)'>" + val + "</a>");
 		}
 		
 		// link to bom
-		function link_to_bom_table( part_num ){
-			alert( part_num );
-		}
-		
-		
+		window.operateEvents = {
+		  'click .part_num_info': function (e, value, row, index) {
+			alert(JSON.stringify(row));
+		  }
+		};
+				
 		// supplier revise button
 		function supplier_revise_btn(){
 			$("#supplier_search_page").hide();
