--- a/index.html
+++ b/index.html
@@ -370,8 +370,9 @@
 		
 		// search page edit part number field format
 		function edit_part_number( val, row, index ){
-			return ("<a class='part_num_info' href='javascript:void(0)'>" + val + "</a>");
+			return ("<a href='#menu3'>" + val + "</a>");
 		}
+		
 		
 		// supplier revise button
 		function supplier_revise_btn(){
