--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 		
 		// search page edit part number field format
 		function edit_part_number( val, row, index ){
-			return ("<a href='#menu3'>" + val + "</a>");
+			return ("<a href='$('#menu6').trigger('click')'>" + val + "</a>");
 		}
 		
 		
