--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
 		
 		window.guide_num_event = {
 			'click .part_number': function (e, value, row, index) {
+				alert('test');
 				$('#menu5').tab('show');
 				var cnt = document.getElementById( "menu5" );
 				var part_attr = cnt.getElementsByClassName("part_attr");
