--- a/index.html
+++ b/index.html
@@ -367,10 +367,10 @@
 		window.guide_num_event = {
 			'click .part_number': function (e, value, row, index) {
 				$('#menu5').tab('show');
-				var cnt = document.getElementById( "menu5" );
+				/*var cnt = document.getElementById( "menu5" );
 				var part_attr = cnt.getElementsByClassName("part_attr");
 				var attr = get_doc_part_attr( part_attr );
-				attr.number = value;
+				attr.number = value;*/
 			},
 		};
 		
