--- a/index.html
+++ b/index.html
@@ -366,12 +366,12 @@
 		
 		window.guide_num_event = {
 			'click .part_number': function (e, value, row, index) {
-				alert('chenge to BOM2');
 				$('.nav-tabs a[href="#menu5"]').tab('show');
-				/*var cnt = document.getElementById( "menu5" );
+				var cnt = document.getElementById( "menu5" );
 				var part_attr = cnt.getElementsByClassName("part_attr");
 				var attr = get_doc_part_attr( part_attr );
-				attr.number = value;*/
+				attr.number = value;
+				alert("test finish");
 			},
 		};
 		
