--- a/index.html
+++ b/index.html
@@ -370,7 +370,14 @@
 				var cnt = document.getElementById( "menu5" );
 				var part_attr = cnt.getElementsByClassName("part_attr");
 				var attr = get_doc_part_attr( part_attr );
-				attr.number = value;
+				for (var i=0; i<var_val.length; i++){
+					switch( var_val[i].name ){
+						case "part_num_list":
+							var_val[i].value = value;
+							break;
+						default:
+					}
+				}
 				alert("test finish");
 			},
 		};
