--- a/index.html
+++ b/index.html
@@ -366,10 +366,9 @@
 		
 		window.guide_num_event = {
 			'click .part_number': function (e, value, row, index) {
-				$('.nav-tabs a[href="#menu5"]').tab('show');
+				setTimeout(chenge_page_wait( 'menu5' ), 2000);
 				var cnt = document.getElementById( "menu5" );
 				var var_val = cnt.getElementsByClassName("part_attr");
-				alert(var_val.length);
 				for (var i=0; i<var_val.length; i++){
 					switch( var_val[i].name ){
 						case "part_num_list":
@@ -381,6 +380,10 @@
 				alert("test finish3");
 			},
 		};
+		
+		function chenge_page_wait( target ){
+			$('.nav-tabs a[href="'+ target +'"]').tab('show');
+		}
 		
 		
 		
