--- a/index.html
+++ b/index.html
@@ -366,23 +366,23 @@
 		
 		window.guide_num_event = {
 			'click .part_number': function (e, value, row, index) {
-				setTimeout(chenge_page_wait(), 2000);
-				var cnt = document.getElementById( "menu5" );
-				var var_val = cnt.getElementsByClassName("part_attr");
-				for (var i=0; i<var_val.length; i++){
-					switch( var_val[i].name ){
-						case "part_num_list":
-							var_val[i].value = value;
-							break;
-						default:
-					}
-				}
-				alert("test finish");
+				$('.nav-tabs a[href="menu5"]').tab('show');
+				setTimeout(delay_chenge_bom_num( value ), 2000);
+				alert("test finish1");
 			},
 		};
 		
-		function chenge_page_wait( target ){
-			$('.nav-tabs a[href="menu5"]').tab('show');
+		function delay_chenge_bom_num( value ){
+			var cnt = document.getElementById( "menu5" );
+			var var_val = cnt.getElementsByClassName("part_attr");
+			for (var i=0; i<var_val.length; i++){
+				switch( var_val[i].name ){
+					case "part_num_list":
+						var_val[i].value = value;
+						break;
+					default:
+				}
+			}
 		}
 		
 		
