--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
 		window.guide_num_event = {
 			'click .part_number': function (e, value, row, index) {
 				$('.nav-tabs a[href="menu5"]').tab('show');
-				setTimeout(delay_chenge_bom_num( value ), 2000);
-				alert("test finish1");
+				/*setTimeout(delay_chenge_bom_num( value ), 2000);
+				alert("test finish1");*/
 			},
 		};
 		
