--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
 		
 		window.guide_num_event = {
 			'click .part_number': function (e, value, row, index) {
-				$('.nav-tabs a[href="menu5"]').tab('show');
-				/*setTimeout(delay_chenge_bom_num( value ), 2000);
-				alert("test finish1");*/
+				$('.nav-tabs a[href="#menu5"]').tab('show');
+				setTimeout(delay_chenge_bom_num( value ), 2000);
+				alert("test finish1");
 			},
 		};
 		
