--- a/index.html
+++ b/index.html
@@ -368,7 +368,6 @@
 			'click .part_number': function (e, value, row, index) {
 				$('.nav-tabs a[href="#menu5"]').tab('show');
 				setTimeout(delay_chenge_bom_num( value ), 2000);
-				alert("test finish1");
 			},
 		};
 		
@@ -383,6 +382,7 @@
 					default:
 				}
 			}
+			alert(value)
 		}
 		
 		
