--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
 			if ( bool_check ){
 				var cnt = document.getElementById( "menu5" );
 				var var_val = cnt.getElementsByClassName("part_attr");
+				alert(var_val);
 				for (var i=0; i<var_val.length; i++){
 					switch( var_val[i].name ){
 						case "part_num_list":
@@ -392,11 +393,11 @@
 		
 		
 		function delay_2_sec() {
-		  return new Promise(resolve => {
-			setTimeout(() => {
-			  resolve( true );
-			}, 2000);
-		  });
+			return new Promise(resolve => {
+				setTimeout(() => {
+					resolve( true );
+				}, 2000);
+			});
 		}
 
 		
@@ -730,7 +731,7 @@
 			cnt.appendChild(div_first_obj);
 			var div_second_obj = document.createElement( "div" );
 			div_second_obj.setAttribute("class", "text_field");
-			var data_str = '<label for="part_num_in">品號 : </label><input id="part_num_in" class="input_container part_list_style normal_font" name="part_num_list" list="part_list" onchange="update_bomtable_type( this.value, -1 )"/>';
+			var data_str = '<label for="part_num_in">品號 : </label><input id="part_num_in" class="part_attr input_container part_list_style normal_font" name="part_num_list" list="part_list" onchange="update_bomtable_type( this.value, -1 )"/>';
 			div_second_obj.innerHTML = data_str;
 			div_first_obj.appendChild(div_second_obj);
 		}
