--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 			var cnt = document.getElementById( "menu5" );
 			var len_num = 0;
 			var var_val;
-			while ( len_num > 0 ){
+			while ( len_num == 0 ){
 				var_val = cnt.getElementsByClassName("part_attr");
 				len_num = var_val.length;
 				await time_delay( 200 );
