--- a/index.html
+++ b/index.html
@@ -371,10 +371,12 @@
 		};
 
 		async function chenge_page( value ) {
-			remove_bomtable_interface();
-			await time_delay( 200 );
-			$('.nav-tabs a[href="#menu5"]').tab('show');
 			var cnt = document.getElementById( "menu5" );
+			var div_obj = document.getElementById( "bom" );
+			cnt.removeChild(div_obj);
+			await time_delay( 200 );
+			alert( 'test' );
+			$('.nav-tabs a[href="#menu5"]').tab('show');
 			var len_num = 0;
 			var var_val;
 			while ( len_num == 0 ){
